@@ -169,6 +169,8 @@ namespace KJS {
     int offset;
   };
 
+  inline UChar::UChar(const UCharReference &c) : uc(c.unicode()) { }
+
   /**
    * @short 8 bit char based string class
    */
